This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: siphash shouldn't byte swap the keys
Type: behavior Stage: resolved
Components: Interpreter Core Versions: Python 3.8, Python 3.7, Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: benjamin.peterson
Priority: normal Keywords: patch

Created on 2017-12-09 19:02 by benjamin.peterson, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 4771 merged benjamin.peterson, 2017-12-09 19:05
PR 4773 merged benjamin.peterson, 2017-12-09 20:50
Messages (3)
msg307910 - (view) Author: Benjamin Peterson (benjamin.peterson) * (Python committer) Date: 2017-12-09 19:02
Reference siphash takes the keys as a bytes, so it makes sense to byte swap when reifying the keys as 64-bit integers. However, Python's modified siphash takes host integers in to start with.
msg307913 - (view) Author: Benjamin Peterson (benjamin.peterson) * (Python committer) Date: 2017-12-09 19:24
New changeset 4e3e156391e70cd23cae18f2629ec323b3b1e7de by Benjamin Peterson in branch 'master':
bpo-32260: don't byte swap siphash keys (#4771)
https://github.com/python/cpython/commit/4e3e156391e70cd23cae18f2629ec323b3b1e7de
msg307915 - (view) Author: Benjamin Peterson (benjamin.peterson) * (Python committer) Date: 2017-12-09 21:11
New changeset 60ed1308304964e5648d8bfc9b74bd549570fa83 by Benjamin Peterson in branch 'master':
byte swap the raw hash secrets (more bpo-32260) (#4773)
https://github.com/python/cpython/commit/60ed1308304964e5648d8bfc9b74bd549570fa83
History
Date User Action Args
2022-04-11 14:58:55adminsetgithub: 76441
2017-12-09 22:06:40benjamin.petersonsetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2017-12-09 21:11:41benjamin.petersonsetmessages: + msg307915
2017-12-09 20:50:15benjamin.petersonsetpull_requests: + pull_request4675
2017-12-09 19:24:20benjamin.petersonsetmessages: + msg307913
2017-12-09 19:05:03benjamin.petersonsetkeywords: + patch
stage: patch review
pull_requests: + pull_request4674
2017-12-09 19:02:55benjamin.petersoncreate